--- a/mfil.Rmd
+++ b/mfil.Rmd
@@ -18,8 +18,8 @@ library(effects)
 
 source("https://gist.githubusercontent.com/benmarwick/2a1bb0133ff568cbe28d/raw/fb53bd97121f7f9ce947837ef1a4c65a73bffb3f/geom_flat_violin.R")
 
-cPalette <- c("#0072B2", "#CC79A7")
-cbPalette <- c("#0072B2","#009E73","#CC79A7")
+cbPalette <- c("salmon", 'steelblue', 'goldenrod1')
+cbPaletteCol <- c("salmon", 'steelblue', 'goldenrod2')
 cbbPalette <- c("#000000", "#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
 ```
 
@@ -51,7 +51,7 @@ summary(F0_lmer)
 ```
 ```{r F1lmer}
 F1_lmer <- lmer(
-  F1 ~ Vowel * Mode + (1+Mode|Speaker),
+  F1 ~ Mode + (1+Mode|Speaker),
   data
 )
 summary(F1_lmer)
@@ -101,18 +101,26 @@ axis.line.y = element_line(colour = 'black', size=0.5, linetype='solid'))
 
 <!-- Sample box/violin plots with jitter for F0 and Duration, faceted by gender and phonological lenth respectively -->
 
+```{r f0density}
+F0z_den <- ggplot(data, aes(x = F0_z, fill = Mode, alpha = 0.5)) + 
+  geom_density(bw = 0.30, trim = FALSE) +
+  scale_fill_manual(values = paletteFill)
+F0z_den
+```
+
+
 ```{r f0z-plot}
 F0z_plot <- ggplot(data, aes(y = F0_z, x = Mode, fill = Mode)) +
   geom_flat_violin(position = position_nudge(x = .2, y = 0), alpha = .8) +
-  geom_point(aes(y = F0_z, color = Mode), position = position_jitter(width = .15), size = .5, alpha = 0.8) +
+  geom_point(aes(y = F0_z, color = Mode), position = position_jitter(width = .15), size = .2, alpha = 0.5) +
   geom_boxplot(width = .1, outlier.shape = NA, alpha = 0.5) +
   expand_limits(x = 4) +
-  guides(fill = FALSE) +
+  #guides(fill = FALSE) +
   guides(color = FALSE) +
   coord_flip() +
   theme_bw() + scale_fill_manual(values = cbPalette) + 
   labs(title = "Scaled F0 in soft, neutral and loud speech") +
-  scale_colour_manual(values = cbPalette)
+  scale_colour_manual(values = cbPaletteCol)
 
 F0z_plot
 
@@ -124,10 +132,10 @@ ggsave('plots/F0zplot.png', F0z_plot)
 ```{r dur-Plot}
 Dur_plot <- ggplot(durData, aes(y = Duration, x = Mode, fill = Mode)) +
   geom_flat_violin(position = position_nudge(x = .2, y = 0), alpha = .8) +
-  geom_point(aes(y = Duration, color = Mode), position = position_jitter(width = .15), size = .5, alpha = 0.8) +
+  geom_point(aes(y = Duration, color = Mode), position = position_jitter(width = .15), size = .5, alpha = 0.5) +
   geom_boxplot(width = .1, outlier.shape = NA, alpha = 0.5) +
   expand_limits(x = 4) +
-  guides(fill = FALSE) +
+  #guides(fill = FALSE) +
   guides(color = FALSE) +
   coord_flip() +
   theme_bw() + scale_fill_manual(values = cbPalette) + 
@@ -143,14 +151,15 @@ ggsave('plots/durPlot.png', Dur_plot)
 <!-- F1-F2 vowel plots for M and F speakers faceted by vowel, coloured by mode -->
 
 ```{r vowelMalePlot}
-FM_plot <- filter(data, Gen == "M") %>% filter(Mode != 'Soft') %>%
+FM_plot <- filter(data, Gen == "M") %>% filter(Mode != 'Soft') %>% filter(F2 < 2400) %>%
 ggplot(aes(F2, F1, colour = Mode)) +
-  geom_point(alpha = 1.0) +
-  stat_ellipse() +
+  #geom_point(alpha = 1.0) +
+  stat_ellipse(geom = "polygon", alpha = 0.8, aes(fill = Mode)) +
   scale_x_reverse() +
   scale_y_reverse() + 
   facet_wrap(~Vowel, scales = 'free') + 
-  scale_colour_manual(values = cPalette) 
+  scale_colour_manual(values = cbPalette) +
+  scale_fill_manual(values = cbPalette)
   # + labs(title = "F1-F2 vowel plots for male speakers in neutral and and loud speech") 
  
 FM_plot
@@ -158,15 +167,15 @@ ggsave('plots/vowelPlotMale.png', FM_plot)
 ```
 
 ```{r vowelFPlot}
-FF_plot <- filter(data, Gen == "F") %>% filter(Mode != 'Soft') %>%
+FF_plot <- filter(data, Gen == "F") %>% filter(Mode != 'Soft') %>% filter(F2 < 2500) %>%
 ggplot(aes(F2, F1, colour = Mode)) +
-  geom_point(alpha = 1) +
-  stat_ellipse() +
+  #geom_point(alpha = 1) +
+  stat_ellipse(geom = "polygon", alpha = 1/2, aes(fill = Mode)) +
   scale_x_reverse() +
   scale_y_reverse() + 
   facet_wrap(~Vowel, scales = 'free') +
   # labs(title = "F1-F2 vowel plots for female speakers in neutral and loud speech") +
-  scale_colour_manual(values = cPalette)
+  scale_colour_manual(values = paletteFill)
   
 FF_plot
 ggsave('plots/VowelPlotFemale.png', FF_plot)
@@ -176,8 +185,8 @@ ggsave('plots/VowelPlotFemale.png', FF_plot)
 
 sample_F1 <- filter(data, Gen == 'M') %>% filter(Vowel %in% c('i', 'a')) %>% 
   ggplot(aes(y = F1, x = Mode, fill = Mode)) +
-  geom_flat_violin(position = position_nudge(x = .2, y = 0), alpha = .8) +
-  geom_point(aes(y = F1, color = Speaker), position = position_jitter(width = .15), size = .5, alpha = 1) + stat_ellipse() +
+  geom_flat_violin(position = position_nudge(x = .2, y = 0), alpha = 0.8) +
+  geom_point(aes(y = F1, color = Mode), position = position_jitter(width = .15), size = .5, alpha = 0.5) + stat_ellipse() +
   geom_boxplot(width = .1, outlier.shape = NA, alpha = 0.5) +
   expand_limits(x = 4) +
   guides(fill = FALSE) +
@@ -186,7 +195,7 @@ sample_F1 <- filter(data, Gen == 'M') %>% filter(Vowel %in% c('i', 'a')) %>%
   facet_grid(~Vowel) +
   theme_bw() + scale_fill_manual(values = cbPalette) +
   # labs(title = 'F1 for /a/ and /i/ by male speakers in soft, neutral and loud speech') +
-  scale_colour_manual(values = cbbPalette)
+  scale_colour_manual(values = cbPaletteCol)
 
 sample_F1
 ggsave('plots/sampleF1ai.png', sample_F1)
@@ -194,47 +203,83 @@ ggsave('plots/sampleF1ai.png', sample_F1)
 
 ```{r sampleIAF2}
 
-sample_F2 <- filter(data, Gen == 'M') %>% filter(Vowel %in% c('e')) %>% filter(Speaker %in% c('1', '2', '3')) %>% 
+sample_F2 <- filter(data, Gen == 'M') %>% filter(Vowel %in% c('e')) %>% filter(Speaker %in% c('1', '2', '3')) %>% filter(F2 > 1750) %>%
   ggplot(aes(y = F2, x = Mode, fill = Mode)) +
-  geom_flat_violin(position = position_nudge(x = .2, y = 0), alpha = .8) +
+  #geom_flat_violin(position = position_nudge(x = .2, y = 0), alpha = .8) +
   geom_point(aes(y = F2, color = Mode), position = position_jitter(width = .15), size = .5, alpha = 1) +
-  geom_boxplot(width = .1, outlier.shape = NA, alpha = 0.5) +
-  expand_limits(x = 4) +
+  geom_boxplot(width = .9, outlier.shape = NA, alpha = 0.8) +
+  #expand_limits(x = 4) +
   guides(colour = FALSE) +
-  guides(fill = FALSE) +
+  #guides(fill = FALSE) +
   guides(color = FALSE) +
-  coord_flip() +
+  #coord_flip() +
   facet_grid(~Speaker) +
   theme_bw() + scale_fill_manual(values = cbPalette) +
   # labs(title = 'F2 for /e/ by male speakers 1, 2 and 3 in soft, neutral and loud speech') +
-  scale_colour_manual(values = cbPalette)
+  scale_colour_manual(values = cbPaletteCol)
 
 sample_F2
 ggsave('plots/sampleF2ai.png', sample_F2)
 ```
 
-```{r interSoftM}
-interSoft <- filter(data, Mode =='Soft') %>% filter(Gen == 'M') %>%
+```{r}
+betweenNeutral <- filter(data, Vowel == 'e') %>% 
+  filter(Speaker %in% c('1', '2', '3')) %>%
+  filter(Mode == 'Neutral') %>% 
+  ggplot(aes(x = F2, fill = Speaker, alpha = 0.5)) +
+  geom_density(trim = FALSE) +
+  scale_fill_manual(values = cbPalette)
+
+betweenNeutral
+ggsave('plots/f2e123Neutral.png', betweenNeutral)
+  
+```
+
+```{r}
+betweenLoud <- filter(data, Vowel == 'e') %>% 
+  filter(Speaker %in% c('1', '2', '3')) %>%
+  filter(Mode == 'Loud') %>% 
+  ggplot(aes(x = F2, fill = Speaker, alpha = 0.5)) +
+  geom_density() + 
+  scale_fill_manual(values = cbPalette)
+
+betweenLoud
+ggsave('plots/f2e123Loud.png', betweenLoud)
+  
+```
+
+```{r interNeutralM123}
+interNeutral <- filter(data, Mode =='Neutral') %>% filter(Speaker %in% c('1', '2', '3')) %>%
+  filter(Vowel %in% c('i', 'e')) %>%
                     ggplot(aes(F2, F1, colour = Speaker)) +
                     geom_point(alpha = 1) + 
-                    stat_ellipse() +
+                    stat_ellipse(geom = "polygon", alpha = 1/2, aes(fill = Speaker)) +
                     scale_x_reverse() +
                     scale_y_reverse() + 
-                    facet_wrap(~Vowel, scales = 'free') 
+                    facet_wrap(~Vowel, scales = 'free') +
+                    scale_fill_manual(values = cbPalette) +
+                    scale_colour_manual(values = cbPaletteCol)
 
-print(interSoft + scale_colour_manual(values = cbbPalette))
+interNeutral
+ggsave('plots/interNeutralF1F2123ei.png', interNeutral)
+
 ```
 
 ```{r interLoudM}
-interLoudM <- filter(data, Mode =='Loud') %>% filter(Gen == 'M') %>%
+interLoud <- filter(data, Mode =='Loud') %>% filter(Speaker %in% c('1', '2', '3')) %>%
+  filter(Vowel %in% c('i', 'e')) %>%
                     ggplot(aes(F2, F1, colour = Speaker)) +
                     geom_point(alpha = 1) + 
-                    stat_ellipse() +
+                    stat_ellipse(geom = 'polygon', alpha = 1/2, aes(fill = Speaker)) +
                     scale_x_reverse() +
                     scale_y_reverse() + 
-                    facet_wrap(~Vowel, scales = 'free') 
+                    facet_wrap(~Vowel, scales = 'free') +
+                    scale_colour_manual(values = cbPalette) +
+                    scale_fill_manual(values = cbPalette)
 
-print(interLoudM + scale_colour_manual(values = cbbPalette))
+interLoud
+ggsave('plots/interLoudF1F2123ei.png', interLoud)
+
 ```
 
 
